# discord-bot

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  automod.py  bot.db  bot.py  image_generator.py  leveling_system.py  logging_system.py  moderation.py  pyproject.toml  requirements.txt  roles.py  temp_voice.py  test_moderation.py  tickets.py  warning_system.py  welcome.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
app/: bot.py  container.py
application/: __init__.py
cogs/: __init__.py  commands.py  events.py
database/: db.py  models.py
docs/: CHANGELOG.md  configuration.md  faq.md  migration.md  overview.md  setup.md  tests.md
infrastructure/: __init__.py
infrastructure/config/: __init__.py  json_store.py  levels_store.py  (+1 more)
plans/: architecture_refactor_plan.md
presentation/: __init__.py  automod.py
src/: automod.py  image_generator.py  leveling_system.py  logging_system.py  moderation.py  roles.py  temp_voice.py  tickets.py  warning_system.py  welcome.py
tests/: conftest.py  test_automod.py  test_bot.py  test_commands.py  test_contracts.py  test_database.py  test_discord_helpers.py  test_events.py  test_image_generator.py  test_json_stores.py  test_leveling_system.py  test_logging_system.py  test_moderation.py  test_repositories.py  test_roles.py  test_temp_voice.py  test_tickets.py  test_warning_system.py  test_welcome.py
utils/: monitoring.py
(+37 files in other folders)
